launch: improve EOS on shutdown handling

When the -e option is selected, also wait for EOS when the pipeline produced an
error.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=630997